# FlaskRestful-comic

./: .gitignore  Dockerfile  README.md  UPDATE.md  alembic.ini  pyproject.toml  run.py  uwsgi.ini
app/: __init__.py  config.py  main.py
app/alembic/: env.py
app/alembic/versions/: 37c5ace0bc93_update_comic_table.py  a6739b656741_update_comic_table.py  d70297f94004_init_table.py  f45f7b926812_init_table.py
app/models/: auth.py  base.py  comic.py
app/resources/: auth.py  comic.py  version.py
app/schemas/: auth.py  base.py  comic.py
app/services/: comicrecomm.py
app/utils/: abort.py  role.py  security.py
frontend/js/: config.js  script.js  server.json
model/: X_matrix.npz  file_infos.json  vectorizer.joblib
